[package]
name = "libswas"
version = "0.3.2"
authors = ["Ildar Sadykov <irsdkv@gmail.com> INTEC Group LLC"]

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "a61ad5d" }
leveldb = "0.8"
rand = "0.5.5"
rust-crypto = "^0.2"
serde = "1.0.72"
serde_derive = "1.0.72"
serde_json = "1.0.26"
byteorder = "1"
rustc-serialize = "0.3.24"
secp256k1 = "0.11.1"
toml = "0.4.8"
dirs = "1.0.4"
base16 = "0.1.1"
display_derive = "0.0.0"
failure = "0.1.1"
failure_derive = "0.1.1"
tempdir = "0.3.7"
db-key = "0.1.0"
spinner = "0.4.0"
bitcoin-bech32 = "0.8.0"

[dependencies.exonum_bitcoinrpc_zec_exp]
git = "https://github.com/rndintec/zcash-bitcoinrpc.git"
rev = "9359dabe4979f4b1e247734bd63b0fbe4d109363"

[dependencies.librustzcash]
git = "https://github.com/rndintec/nonstatic-librustzcash.git"
rev = "c1b05f35e57a1e3ac14f570432636505b4d2615c"

[dependencies.libbitcoin-zcash]
git = "https://github.com/rndintec/rust-zcash.git"
rev = "3c6a3603c86742e06efa144e57c080abf228d7b0"

[features]
default = ["bitcoin/serde", "libbitcoin-zcash/serde"]
